[gd_scene load_steps=44 format=3 uid="uid://b4g2hassu4ba3"]

[ext_resource type="Script" path="res://Levels/main_menu.gd" id="1_7i8tt"]
[ext_resource type="Texture2D" uid="uid://ry76fr40bh1x" path="res://Utilities/menu/mainmenu_background.png" id="2_8lpg5"]
[ext_resource type="FontFile" uid="uid://calx8htg8hbrm" path="res://Utilities/Font/type_writer.ttf" id="3_0618k"]
[ext_resource type="Texture2D" uid="uid://d15ybmppa15we" path="res://Utilities/menu/mainmenu_overlay.png" id="3_mkde0"]
[ext_resource type="PackedScene" uid="uid://rciuksj88nme" path="res://Utilities/Effects/dash_charge.tscn" id="4_xo8hq"]
[ext_resource type="Texture2D" uid="uid://iwj6df8frwo5" path="res://Utilities/Effects/floaty_128.png" id="5_lhhsb"]
[ext_resource type="Shader" path="res://Levels/MainMenu.gdshader" id="7_kiinj"]
[ext_resource type="AudioStream" uid="uid://baw484xopw2n1" path="res://audio/music/main menu music (memory of the lost).wav" id="7_n0s8a"]
[ext_resource type="Shader" path="res://Levels/GodRays.gdshader" id="8_axxur"]
[ext_resource type="Texture2D" uid="uid://2mw87c66lm1t" path="res://Utilities/Effects/noise_combined.png" id="8_uywjc"]
[ext_resource type="Texture2D" uid="uid://d31ig1l5f2p7o" path="res://Utilities/Effects/spotlight_2.png" id="9_qjeek"]
[ext_resource type="Texture2D" uid="uid://dn7euw3xjp0i8" path="res://Utilities/Effects/spotlight_2_alpha.png" id="9_yawbd"]
[ext_resource type="Script" path="res://Levels/start_game.gd" id="12_jc6nj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v60mb"]
texture = ExtResource("2_8lpg5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v5jvq"]
texture = ExtResource("3_mkde0")

[sub_resource type="Gradient" id="Gradient_gf25l"]
offsets = PackedFloat32Array(0, 0.162393, 0.380342, 1)
colors = PackedColorArray(0.341358, 0.530782, 0.994568, 1, 0.0981737, 0.428388, 0.995935, 1, 0.222094, 0.229419, 0.933168, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rsjnu"]
gradient = SubResource("Gradient_gf25l")

[sub_resource type="Curve" id="Curve_akdfk"]
max_value = 3.0
_data = [Vector2(0, 0.496044), 0.0, 21.8599, 0, 0, Vector2(0.10687, 0.469937), 31.1695, 31.1695, 0, 0, Vector2(0.206107, 0.439082), 34.1318, 34.1318, 0, 0, Vector2(0.29771, 0.439082), 41.7666, 41.7666, 0, 0, Vector2(0.374046, 0.408228), 38.1096, 38.1096, 0, 0, Vector2(0.446565, 0.439082), 34.3564, 34.3564, 0, 0, Vector2(0.51145, 0.408228), 35.3669, 35.3669, 0, 0, Vector2(0.580153, 0.377374), 35.3669, 35.3669, 0, 0, Vector2(0.652672, 0.346519), 21.557, 21.557, 0, 0, Vector2(0.721374, 0.377374), 20.5206, 20.5206, 0, 0, Vector2(0.793893, 0.315665), 18.1887, 18.1887, 0, 0, Vector2(0.874046, 0.315665), 23.4432, 23.4432, 0, 0, Vector2(0.935114, 0.315665), 14.3022, 14.3022, 0, 0, Vector2(1, 0.315665), 0.0, 0.0, 0, 0]
point_count = 14

[sub_resource type="CurveTexture" id="CurveTexture_42jed"]
curve = SubResource("Curve_akdfk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oamjr"]
lifetime_randomness = 0.1
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(18, 0, 1)
spread = 40.0
initial_velocity_max = 1.0
angular_velocity_min = -426.22
angular_velocity_max = -426.22
gravity = Vector3(3, -5, 0)
scale_min = 0.1
scale_max = 0.25
scale_curve = SubResource("CurveTexture_42jed")
color_ramp = SubResource("GradientTexture1D_rsjnu")
anim_speed_max = 0.2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_cvcl8"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_bsxei"]
offsets = PackedFloat32Array(0, 0.17094, 0.57265, 0.752137)
colors = PackedColorArray(0.129412, 0.0705882, 0.443137, 0.988235, 0.130348, 0.111937, 0.545891, 0.831373, 0.254902, 0.12549, 0.654902, 0.34902, 0.158653, 0.0842312, 0.683891, 0.117647)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_818ji"]
gradient = SubResource("Gradient_bsxei")

[sub_resource type="Curve" id="Curve_7ooek"]
max_value = 2.0
_data = [Vector2(0, 0.39557), 0.0, 0.0, 0, 0, Vector2(1, 0.560127), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_00w7t"]
curve = SubResource("Curve_7ooek")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tgwbr"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 0.2, 1)
emission_shape = 3
emission_box_extents = Vector3(3.6, 0, 1)
gravity = Vector3(1, -1, 0)
scale_min = 0.2
scale_max = 0.2
scale_curve = SubResource("CurveTexture_00w7t")
color_ramp = SubResource("GradientTexture1D_818ji")

[sub_resource type="Gradient" id="Gradient_djnhf"]
offsets = PackedFloat32Array(0, 0.324786, 0.713675, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.249384, 0.346238, 0.990987, 1, 0.302957, 0.412575, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1r3nd"]
gradient = SubResource("Gradient_djnhf")

[sub_resource type="Curve" id="Curve_glrly"]
max_value = 2.0
_data = [Vector2(0, 1.44462), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tpct2"]
curve = SubResource("Curve_glrly")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rn6qr"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 0.2, 1)
emission_shape = 3
emission_box_extents = Vector3(5.6, 0, 1)
gravity = Vector3(1, -1, 0)
scale_min = 0.2
scale_max = 0.2
scale_curve = SubResource("CurveTexture_tpct2")
color_ramp = SubResource("GradientTexture1D_1r3nd")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ph0xq"]
shader = ExtResource("8_axxur")
shader_parameter/angle = 0.58
shader_parameter/position = 0.165
shader_parameter/spread = 1.0
shader_parameter/cutoff = 0.141
shader_parameter/falloff = 0.0
shader_parameter/edge_fade = 0.15
shader_parameter/speed = 2.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.0
shader_parameter/color = Color(1, 1, 1, 0.0901961)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u8pkn"]
shader = ExtResource("7_kiinj")
shader_parameter/speed = 0.03
shader_parameter/noise_img = ExtResource("8_uywjc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_go4xe"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3vs4j"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ayk4q"]
bg_color = Color(0.596078, 0.584314, 0.572549, 0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.223529)
shadow_size = 5
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ds7w4"]
bg_color = Color(1, 1, 1, 0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0)
shadow_size = 5
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4gc48"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pp2ot"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tfdj2"]
modulate_color = Color(1, 1, 1, 0.694118)

[sub_resource type="Animation" id="Animation_4eott"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uwa23"]
resource_name = "fade_to_normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.988235), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v4txe"]
_data = {
"RESET": SubResource("Animation_4eott"),
"fade_to_normal": SubResource("Animation_uwa23")
}

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7i8tt")

[node name="Underlay" type="Panel" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v60mb")

[node name="Overlay" type="Panel" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v5jvq")

[node name="Glow2" parent="." instance=ExtResource("4_xo8hq")]
position = Vector2(240, 270)
scale = Vector2(16.8278, -9.48478)
amount = 500
process_material = SubResource("ParticleProcessMaterial_oamjr")
lifetime = 20.0

[node name="fire left" type="GPUParticles2D" parent="."]
visible = false
z_index = 1
material = SubResource("CanvasItemMaterial_cvcl8")
position = Vector2(73, 111.1)
scale = Vector2(17.9946, -11.849)
amount = 400
process_material = SubResource("ParticleProcessMaterial_tgwbr")
texture = ExtResource("5_lhhsb")
lifetime = 5.0
explosiveness = 0.15

[node name="fire middle" type="GPUParticles2D" parent="."]
z_index = 1
material = SubResource("CanvasItemMaterial_cvcl8")
position = Vector2(239, 112)
scale = Vector2(17.9946, -11.849)
amount = 700
process_material = SubResource("ParticleProcessMaterial_rn6qr")
texture = ExtResource("5_lhhsb")
lifetime = 6.0
explosiveness = 0.1

[node name="GodRays" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_ph0xq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_u8pkn")
position = Vector2(240, 136.088)
scale = Vector2(0.390879, 0.221641)
texture = ExtResource("9_qjeek")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_u8pkn")
position = Vector2(239.25, 111.8)
scale = Vector2(2.41992, 0.428125)
texture = ExtResource("9_yawbd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = 37.0
offset_right = 24.5
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Start Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Options")
theme_override_colors/font_hover_color = Color(0.60933, 0.60933, 0.60933, 1)
theme_override_colors/font_pressed_color = Color(0.454524, 0.454524, 0.454524, 1)
theme_override_colors/font_focus_color = Color(0.419813, 0.419813, 0.419813, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_0618k")
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxFlat_go4xe")
theme_override_styles/hover = SubResource("StyleBoxFlat_3vs4j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ayk4q")
theme_override_styles/normal = SubResource("StyleBoxFlat_ds7w4")
text = "Start"
script = ExtResource("12_jc6nj")

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Start Game")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Exit")
theme_override_colors/font_hover_color = Color(0.650128, 0.650128, 0.650128, 1)
theme_override_colors/font_pressed_color = Color(0.641934, 0.641934, 0.641934, 1)
theme_override_colors/font_focus_color = Color(0.65834, 0.65834, 0.65834, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_0618k")
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/hover = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/normal = SubResource("StyleBoxFlat_4gc48")
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.650128, 0.650128, 0.650128, 1)
theme_override_colors/font_pressed_color = Color(0.641934, 0.641934, 0.641934, 1)
theme_override_colors/font_focus_color = Color(0.65834, 0.65834, 0.65834, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_0618k")
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/hover = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/normal = SubResource("StyleBoxFlat_4gc48")
text = "Credits
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Options")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Start Game")
theme_override_colors/font_hover_color = Color(0.60933, 0.60933, 0.60933, 1)
theme_override_colors/font_pressed_color = Color(0.454524, 0.454524, 0.454524, 1)
theme_override_colors/font_focus_color = Color(0.419813, 0.419813, 0.419813, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_0618k")
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxFlat_pp2ot")
theme_override_styles/hover = SubResource("StyleBoxFlat_3vs4j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ayk4q")
theme_override_styles/normal = SubResource("StyleBoxFlat_ds7w4")
text = "Exit"

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 140
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="Container" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_tfdj2")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Settings" type="Button" parent="MarginContainer/Container/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.650128, 0.650128, 0.650128, 1)
theme_override_colors/font_pressed_color = Color(0.641934, 0.641934, 0.641934, 1)
theme_override_colors/font_focus_color = Color(0.65834, 0.65834, 0.65834, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_0618k")
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/hover = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/normal = SubResource("StyleBoxFlat_4gc48")
text = "Settings"

[node name="Controls" type="Button" parent="MarginContainer/Container/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.650128, 0.650128, 0.650128, 1)
theme_override_colors/font_pressed_color = Color(0.641934, 0.641934, 0.641934, 1)
theme_override_colors/font_focus_color = Color(0.65834, 0.65834, 0.65834, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_0618k")
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/hover = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/normal = SubResource("StyleBoxFlat_4gc48")
text = "Controls"

[node name="Back" type="Button" parent="MarginContainer/Container/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.650128, 0.650128, 0.650128, 1)
theme_override_colors/font_pressed_color = Color(0.641934, 0.641934, 0.641934, 1)
theme_override_colors/font_focus_color = Color(0.65834, 0.65834, 0.65834, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_0618k")
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/hover = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4gc48")
theme_override_styles/normal = SubResource("StyleBoxFlat_4gc48")
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v4txe")
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_n0s8a")
bus = &"Music"

[connection signal="pressed" from="VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/Container/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/Container/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/Container/VBoxContainer/Back" to="." method="_on_back_pressed"]
